<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Civ Clock</string>
    <string name="action_settings">Settings</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_resign">Resign</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="new_game">New Game</string>
    <string name="active_game">Active Game</string>
    <string name="base_time">Base time</string>
    <string name="turn_bonus1">Turn bonus (A, I)</string>
    <string name="turn_bonus2">Turn bonus (II)</string>
    <string name="turn_bonus3">Turn bonus (III, IV)</string>
    <string name="upkeep_time">Upkeep time</string>
    <string name="start_game">Start game</string>
    <string name="change_time_for_this_player_only">Change time only for this player</string>
    <string name="change_color">Color</string>
    <string name="remove_player">Remove</string>
    <string name="deal">Deal</string>
    <string name="new_age">New age</string>
    <string name="event">Event</string>
    <string name="pass">Pass</string>
    <string name="bid">Bid</string>
    <string name="auction">Auction</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_how_to_pause">Hold to pause</string>
    <string name="hint_how_to_resume">Hold to resume</string>
    <string name="current_turn">Turn %d</string>
    <string name="wrong_time_format">Wrong format</string>


</resources>
