<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/player_details_view">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_red"
            android:id="@+id/change_color_button_0"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_green"
            android:id="@+id/change_color_button_1"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/change_color_button_0"
            android:layout_toStartOf="@+id/change_color_button_0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_yellow"
            android:id="@+id/change_color_button_2"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/change_color_button_1"
            android:layout_toStartOf="@+id/change_color_button_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Change color"
            android:id="@+id/change_color_text"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change time only for this player"
            android:id="@+id/unique_time_checkbox"
            android:checked="false"
            android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/base_time"
            android:id="@+id/textView1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"/>

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/time_picker_widget"
            android:id="@+id/base_time_picker"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_column="1"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/turn_bonus"
            android:id="@+id/textView2"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:layout_column="0"/>

        <include
            layout="@layout/time_picker_widget"
            android:id="@+id/turn_bonus_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_column="1"/>

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/upkeep_time"
            android:id="@+id/textView3"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"/>

        <include
            layout="@layout/time_picker_widget"
            android:id="@+id/upkeep_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"/>
    </TableRow>


</TableLayout>